--- a/audiouse.html
+++ b/audiouse.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>视频播放</title>
+    <title>音频播放</title>
   </head>
   <body>
-    <video controls src="sample.mp4"></video>
+    <audio controls src="sample.mp3"></audio>
   </body>
 </html>
