--- a/water.html
+++ b/water.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Canvas 动画之水波纹动画 2D 版</title>
+    <!-- 引用清除默认样式的 Css 文件 -->
     <link rel="stylesheet" href="css/water.css">
   </head>
   <body>
+    <!-- 创建 canvas 标签 -->
     <canvas id="canvas"></canvas>
+    <!-- 引用脚本 -->
     <script src="js/water.js"></script>
   </body>
 </html>
