--- a/line.html
+++ b/line.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Canvas 动画之水波纹动画 2D 版</title>
+    <title>Canvas 动画之线条动画 2D 版</title>
     <!-- 引用清除默认样式的 Css 文件 -->
-    <link rel="stylesheet" href="css/water.css">
+    <link rel="stylesheet" href="css/line.css">
   </head>
   <body>
     <!-- 创建 canvas 标签 -->
     <canvas id="canvas"></canvas>
     <!-- 引用脚本 -->
-    <script src="js/water.js"></script>
+    <script src="js/line.js"></script>
   </body>
 </html>
