--- a/hive.html
+++ b/hive.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>Canvas 动画之线条动画 2D 版</title>
     <!-- 引用清除默认样式的 Css 文件 -->
-    <link rel="stylesheet" href="css/line.css">
+    <link rel="stylesheet" href="css/hive.css">
   </head>
   <body>
     <!-- 创建 canvas 标签 -->
     <canvas id="canvas"></canvas>
     <!-- 引用脚本 -->
-    <script src="js/line.js"></script>
+    <script src="js/rect.js"></script>
+    <script src="js/hive.js"></script>
   </body>
 </html>
